--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,16 @@
         <item>10+ packets</item>
     </string-array>
 
+    <string-array name="category_array">
+        <item>Food</item>
+        <item>Clothes</item>
+        <item>Stationaries</item>
+        <item>Toys</item>
+        <item>Others</item>
+    </string-array>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
+
